--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -13,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,12 +233,10 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
-    "crowdfunding_info_df.info()"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -260,35 +257,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cf_id\n",
-      "contact_id\n",
-      "company_name\n",
-      "blurb\n",
-      "goal\n",
-      "pledged\n",
-      "outcome\n",
-      "backers_count\n",
-      "country\n",
-      "currency\n",
-      "launched_at\n",
-      "deadline\n",
-      "staff_pick\n",
-      "spotlight\n",
-      "category & sub-category\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
+       "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
+       "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n",
-    "for col in crowdfunding_info_df:\n",
-    "    print(col)"
+    "# Get the crowdfunding_info_df columns.\n"
    ]
   },
   {
@@ -892,7 +879,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2246,7 +2232,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2328,7 +2313,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2344,7 +2328,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2787,7 +2770,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3718,7 +3700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
