--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -2351,11 +2351,21 @@
    "source": [
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
+    "\n",
+    "\n",
+    "#Iterate\n",
     "dict_values = []\n",
+    "for i, row in contact_info_df.iterrows():\n",
+    "    data = row[0]\n",
+    "    try:\n",
+    "        converted_data = json.loads(data)\n",
+    "        row_values = [v for k, v in converted_data.items()]\n",
+    "        dict_values.append(row_values)\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        print(f\"Error processing row {i + 1}: {e}\")\n",
     "\n",
-    "\n",
-    "# Print out the list of values for each row.\n",
-    "print(dict_values)"
+    "# Print out the list of values for each row\n",
+    "print(dict_values)\n"
    ]
   },
   {
@@ -2440,7 +2450,10 @@
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "columns=['contact_id', 'name', 'email']\n",
+    "contact_df=pd.DataFrame(dict_values, columns=columns)\n",
+    "contact_df.head()"
    ]
   },
   {
@@ -2466,7 +2479,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_df.info()"
    ]
   },
   {
@@ -2598,9 +2612,12 @@
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
     "\n",
+    "contact_df[['first_name' , 'last_name']]=contact_df['name'].str.split(' ' , expand=True)\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "\n",
+    "contact_df.drop(columns=['name'], inplace=True)\n",
+    "contact_df.head()"
    ]
   },
   {
@@ -2730,7 +2747,9 @@
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean=contact_df[['contact_id' , 'first_name' , 'last_name' , 'email']]\n",
+    "contacts_df_clean.head()"
    ]
   },
   {
@@ -2757,7 +2776,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
