--- a/ETL_Mini_Project.ipynb
+++ b/ETL_Mini_Project.ipynb
@@ -13,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -238,6 +239,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1036,12 +1038,12 @@
    "outputs": [],
    "source": [
     "# Export categories_df and subcategories_df as CSV files.\n",
-    "#category_df.to_csv(\"Resources/category.csv\", index=False)\n",
-    "\n",
-    "#subcategory_df.to_csv(\"Resources/subcategory.csv\", index=False)"
+    "category_df.to_csv(\"Resources/category.csv\", index=False)\n",
+    "subcategory_df.to_csv(\"Resources/subcategory.csv\", index=False)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2253,10 +2255,11 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "#campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2338,6 +2341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2353,6 +2357,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2727,7 +2732,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "#contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   }
  ],
