--- a/ETL_Mini_Project.ipynb
+++ b/ETL_Mini_Project.ipynb
@@ -195,7 +195,7 @@
    ],
    "source": [
     "# Read the data into a Pandas DataFrame\n",
-    "crowdfunding_info_df = pd.read_excel('../Resources/crowdfunding.xlsx')\n",
+    "crowdfunding_info_df = pd.read_excel('Resources/crowdfunding.xlsx')\n",
     "crowdfunding_info_df.head()"
    ]
   },
@@ -2336,7 +2336,7 @@
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('../Resources/contacts.xlsx', header=3)\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
