--- a/ETL_Mini_Project.ipynb
+++ b/ETL_Mini_Project.ipynb
@@ -13,7 +13,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +238,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1043,7 +1041,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2259,7 +2256,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2268,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2325,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2341,7 +2337,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2357,7 +2352,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2366,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2381,22 +2375,24 @@
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
     "\n",
+    "#Iterate\n",
     "dict_values = []\n",
     "for i, row in contact_info_df.iterrows():\n",
     "    data = row[0]\n",
-    "    converted_data = json.loads(data)\n",
-    "    # Iterate through each dictionary (row) and get the values for each row using list comprehension.\n",
-    "    row_values =[v for k, v in converted_data.items()]\n",
-    "    # Append the list of values for each row to a list. \n",
-    "    dict_values.append(row_values)\n",
-    "    \n",
-    "# Print out the list of values for each row.\n",
+    "    try:\n",
+    "        converted_data = json.loads(data)\n",
+    "        row_values = [v for k, v in converted_data.items()]\n",
+    "        dict_values.append(row_values)\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        print(f\"Error processing row {i + 1}: {e}\")\n",
+    "\n",
+    "# Print out the list of values for each row\n",
     "print(dict_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2465,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2478,13 +2474,13 @@
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
     "# to the 'contact_id', 'name', 'email' columns.\n",
     "columns=['contact_id', 'name', 'email']\n",
-    "contact_df=pd.DataFrame(dict_values , columns=columns)\n",
+    "contact_df=pd.DataFrame(dict_values, columns=columns)\n",
     "contact_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2590,7 +2586,7 @@
        "4        2199      samuel.sorgatz@gmail.com     Samuel   Sorgatz"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2602,12 +2598,12 @@
     "# Drop the contact_name column\n",
     "\n",
     "contact_df.drop(columns=['name'], inplace=True)\n",
-    "contact_df.head()\n"
+    "contact_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2682,7 @@
        "4        2199     Samuel   Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2699,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
